--- a/package.json
+++ b/package.json
@@ -1,17 +1,20 @@
 {
   "name": "ignews",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "next dev",
     "build": "next build",
-    "start": "next start",
+    "start": "next build && next start",
     "lint": "next lint"
   },
   "dependencies": {
     "next": "12.0.10",
     "react": "17.0.2",
     "react-dom": "17.0.2",
-    "sass": "^1.49.7"
+    "react-icons": "^4.3.1",
+    "sass": "^1.49.7",
+    "stripe": "^8.214.0"
   },
   "devDependencies": {
     "@types/node": "^17.0.18",
