--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
   "devDependencies": {
     "@testing-library/dom": "^8.13.0",
     "@testing-library/jest-dom": "^5.16.4",
-    "@testing-library/react": "^13.3.0",
+    "@testing-library/react": "12.1.2",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^17.0.18",
     "@types/prismic-dom": "^2.1.1",
@@ -38,6 +38,7 @@
     "eslint-config-next": "12.0.10",
     "jest": "^28.1.0",
     "jest-dom": "^4.0.0",
+    "jest-environment-jsdom": "^28.1.0",
     "typescript": "^4.5.5"
   }
 }
