--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "babel-jest": "^28.1.0",
     "eslint": "8.9.0",
     "eslint-config-next": "12.0.10",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^28.1.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.0",
