--- a/package.json
+++ b/package.json
@@ -40,6 +40,7 @@
     "jest": "^28.1.0",
     "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^28.1.0",
+    "jest-mock": "^28.1.0",
     "typescript": "^4.5.5"
   }
 }
